# sample-self-improving-physical-AI

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
agent/: README.md
agent/aws-deployment/: README.md
agent/bedrock-converse/: README.md  act_agent.py  app.py  bedrock_chat.py  config.py  governance_agent.py  hardware_profile.py  hardware_registry.py  iot_client.py  iot_dispatcher.py  layer_config.py  model_deployer.py  model_validator.py  models.py  neo_compiler.py  orchestrator.py  ota_trigger.py  perception_agent.py  requirements.txt  run_model_deploy.py  run_neo_compile_and_validate.py  zumi_tools.py
agent/hermes/: README.md
agent/mcp-articraft/: Dockerfile  README.md  mcporter.json
agent/mcp-articraft/server/: bedrock_generator.py  generator.py  knowledge_base.py  pyproject.toml
agent/openclaw/: README.md
docs/: iot-architecture.md
example/xgo2/: README.md
example/zumi/: README.md
iot/: README.md
iot/greengrass/: deploy.py  greengrass.json
iot/provisioning/: 01-provision-iot-thing.sh  02-deploy-to-zumi.sh  03-verify-connection.sh  deploy-chatbot-update.sh
models/so101/: README.md
scripts/: capture_viewport.py  load_scene_streaming.py  manufacturing_scene.py  pick_and_place.py  robot_control.py  run_sim.sh  spawn_objects.py
scripts/leisaac/: download_assets.sh  load_kitchen_scene.py  render_kitchen.py  run_render.sh  run_streaming.sh
scripts/so101/: render_scene.py  render_v3.py  sim2real_bridge.py  sim_so101.py
scripts/telekinesis/: README.md  (+1 more)
skill/: IOT_CONTROL.md  SIM2REAL_MCP.md  SKILL.md  TELEKINESIS.md
(+69 files in other folders)
