[project]
name = "articraft-mcp-server"
version = "0.1.0"
description = "MCP Servers for Articraft articulated 3D asset generation and retrieval"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "boto3>=1.34.0",
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
generator = [
    "articraft",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
